--- a/config/config.json
+++ b/config/config.json
@@ -4,5 +4,6 @@
   "log_file": false,
   "log_file_path": "./logs/",
   "http_port": "8080",
-  "log_file_paths_to_seek": ["logs/events.log"]
+  "log_file_paths_to_seek": ["logs/events.log"],
+  "database_url": "postgres://postgres:postgres@localhost:5432/log_aggregator?sslmode=disable"
 }
