--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,5 @@
   "log_file": false,
   "log_file_path": "./logs/",
   "http_port": "8080",
-  "log_file_paths_to_seek": ["logs/logs.log"],
-  "database_url": "postgres://postgres:postgres@localhost:5432/log_aggregator?sslmode=disable"
+  "clickhouse_db_addr": "localhost:9000"
 }
